                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 02-05-2006 changed: Added UserData/AdvancedSettings.xml loading ability, and moved a bunch of XBoxMediaCenter.xml settings into it.
 - 02-05-2006 fixed: last.fm directory broken
 - 02-05-2006 fixed: shoutcast and lastfm directories didn't honor hide/show parent folder item in a different way
 - 02-05-2006 fixed: inexact matches returned from cddb may not be in utf-8, if this is the case the info will be converted from user charset to utf-8
 - 02-05-2006 fixed: Fatal Error Handler didn't recognise keypresses.
 - 02-05-2006 changed: Animation attributes can use float coordinates instead of just integer coordinates.
 - 02-05-2006 fixed: Image controls from python couldn't be set to preserve aspect ratio.
 - 02-05-2006 changed: my weather location selector (id=3) can now be a select button.
 - 01-05-2006 fixed: inexact matches from allmusic.com where not converted to UTF-8
 - 01-05-2006 updated: Portuguese (Brazil) language file (Thnx to mvbm)
 - 01-05-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 01-05-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 01-05-2006 updated: Chinese (Simple) language file (Thnx to omenpica)
 - 01-05-2006 fixed: cd-ripper can't rip cd's whose cddb info contains none latin characters
 - 01-05-2006 changed: cd-ripper's lame encoder now uses --vbr-new for ripping in vbr mode
 - 01-05-2006 changed: cd-ripper now writes unicode tags
 - 01-05-2006 changed: FATX filename shortening now makes sure to keep important numbers such as .partXXX.rar, CD2.avi in filenames (for FTP uploads to xbox, etc.)